--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
   "flights_path": "/path/to/flights.csv",
   "airports_path": "/path/to/airports.csv",
-  "airlines_path": "/path/to/airlines.csv"
+  "path_to_file": "/path/to/folder/contains/csv_files"
 }
